[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/level/VictoryContainer.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/victory_button_next_level_hover.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/victory_button_retry_hover.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/victory_button_retry_normal.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/victory_button_next_level_normal.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/victory_button_main_menu_normal.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/victory_button_main_menu_hover.png" type="Texture" id=7]

[node name="VictoryContainer" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ButtonContainer" type="HBoxContainer" parent="."]
margin_right = 232.0
margin_bottom = 96.0
size_flags_vertical = 4

[node name="MainMenuButton" type="TextureButton" parent="ButtonContainer"]
margin_right = 64.0
margin_bottom = 96.0
focus_mode = 0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="NextLevelButton" type="TextureButton" parent="ButtonContainer"]
margin_left = 68.0
margin_right = 164.0
margin_bottom = 96.0
focus_mode = 0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 2 )

[node name="RetryButton" type="TextureButton" parent="ButtonContainer"]
margin_left = 168.0
margin_right = 232.0
margin_bottom = 96.0
focus_mode = 0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[connection signal="button_up" from="ButtonContainer/NextLevelButton" to="." method="_on_NextLevelButton_button_up"]
